--- a/index.html
+++ b/index.html
@@ -25,34 +25,30 @@
         Profile Generator
         <span id="span-gender-icon" class="fst-normal">👨👩</span>
       </p>
-
-      <!-- user card -->
-      <div id="div-user-card" class="border rounded-3 p-3 bg-light">
-        <img
-          id="img-profile"
-          class="rounded-circle d-block mx-auto"
-          src="profile-placeholder.jpeg"
-          width="128"
-        />
-        <p id="p-name" class="text-center display-3 placeholder-glow">
-          Name...
-        </p>
-        <p id="p-email" class="text-center fs-5">Email...</p>
-        <p id="p-address" class="text-center fs-6">Address...</p>
-        <button id="btn-random" class="btn btn-primary mx-auto d-block">
-          Generate more ..
-        </button>
-      </div>
-
-      <!-- loading card -->
-      <div id="div-loading-card" class="border rounded-3 p-3 bg-light">
-        <p class="fst-italic text-center display-6">Loading Profile..</p>
-      </div>
-
       <!-- made by -->
       <p class="text-center m-3 text-white fs-5 fst-italic">
-        made by Chayanin Suatap 123456789
+        made by Thanakit Chanlaset 640610637
       </p>
+    </div>
+    <!-- user card -->
+    <div id="div-user-card" class="border rounded-3 p-3 bg-light">
+      <img
+        id="img-profile"
+        class="rounded-circle d-block mx-auto"
+        src="profile-placeholder.jpeg"
+        width="128"
+      />
+      <p id="p-name" class="text-center display-3 placeholder-glow">Name...</p>
+      <p id="p-address" class="text-center fs-6">Address...</p>
+      <p id="p-email" class="text-center fs-5">Email...</p>
+      <button id="btn-random" class="btn btn-primary mx-auto d-block">
+        Generate more ..
+      </button>
+    </div>
+
+    <!-- loading card -->
+    <div id="div-loading-card" class="border rounded-3 p-3 bg-light">
+      <p class="fst-italic text-center display-6">Loading Profile..</p>
     </div>
 
     <script src="script.js"></script>
